--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a href="file:///C:/Users/Dell/Desktop/Vega%20Restaurant/Variety%20food/index.html"><button
                     class="red_btn"><span>visit now </span></button></a>
         </div>
-        <img class="image" src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/pngwing.com%20(24).png"
+        <img class="image" src="hpngwing.com20(25).png"
             alt="errorerror" width="40%">
     </div>
     <!-- our menu bar -->
