Update index.html for images

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a href="file:///C:/Users/Dell/Desktop/Vega%20Restaurant/Variety%20food/index.html"><button
                     class="red_btn"><span>visit now </span></button></a>
         </div>
-        <img class="image" src="pngwing.com (25).png"
+        <img class="image" src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/pngwing.com%20(25).png?raw=true"
             alt="errorerror" width="40%">
     </div>
     <!-- our menu bar -->
