Update index.html all images

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a href="file:///C:/Users/Dell/Desktop/Vega%20Restaurant/Variety%20food/index.html"><button
                     class="red_btn"><span>visit now </span></button></a>
         </div>
-        <img class="image" src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/pngwing.com%20(25).png?raw=true"
+        <img class="image" src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/pngwing.com%20(24).png?raw=true"
             alt="errorerror" width="40%">
     </div>
     <!-- our menu bar -->
@@ -87,30 +87,30 @@
         </div>
         <div class="variety-food">
             <div class="salads">
-                <img src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/%E2%80%94Pngtree%E2%80%94fresh%20spring%20salad%20food%20vegetables_5570560.png"
+                <img src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/%E2%80%94Pngtree%E2%80%94fresh%20spring%20salad%20food%20vegetables_5570560.png?raw=true"
                     alt="errorerror">
                 <a href="file:///C:/Users/Dell/Desktop/Vega%20Restaurant/Variety%20food/index.html">salads</a>
             </div>
             <div class="pizzas">
-                <img src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/pizza-png-19321.png" alt="errorerror">
+                <img src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/pizza-png-19321.png?raw=true" alt="errorerror">
                 <a href="">pizzas</a>
             </div>
             <div class="burgers">
-                <img src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/burger-png-png-images-yellow-images-12.png"
+                <img src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/burger-png-png-images-yellow-images-12.png?raw=true"
                     alt="error">
                 <a href="">burgers</a>
             </div>
             <div class="deserts">
-                <img src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/images.jpeg" alt="error">
+                <img src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/images.jpeg?raw=true" alt="error">
                 <a href="">desserts</a>
             </div>
             <div class="drinks">
-                <img src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/11aabe6a21396480c0ae9105b56abf9f.jpg"
+                <img src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/11aabe6a21396480c0ae9105b56abf9f.jpg?raw=true"
                     alt="error">
                 <a href="">drinks</a>
             </div>
             <div class="sea-foods">
-                <img src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/images%20(1).jpeg" alt="error">
+                <img src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/images%20(1).jpeg?raw=true" alt="error">
                 <a href="">sea food</a>
             </div>
         </div>
@@ -141,7 +141,7 @@
             <div class="cuisine_img">
                 <div class="briyani">
                     <img id="Image"
-                        src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/pngwing.com%20(28).png" alt=""
+                        src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/pngwing.com%20(28).png?raw=true" alt=""
                         width="300px" height="300px">
 
                     <div class="cuisine_text">
@@ -153,7 +153,7 @@
                 <!-- 2nd image -->
                 <div class="north_indian">
                     <img id="Image2"
-                        src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/pngwing.com%20(27).png" alt=""
+                        src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/pngwing.com%20(27).png?raw=true" alt=""
                         width="300px" height="300px">
                     <div class="cuisine_text">
                         <h3 id="Description2">fried red snapper</h3>
@@ -164,7 +164,7 @@
                 <!-- 3rd image -->
                 <div class="south_indian">
                     <img id="Image3"
-                        src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/indian-food-dish-png.png"
+                        src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/indian-food-dish-png.png?raw=true"
                         alt="" width="300px" height="300px">
                     <div class="cuisine_text">
                         <h3 id="Description3">lunch full meals </h3>
@@ -186,13 +186,13 @@
 
     <div class="main_slide2">
         <div class="fooding">
-            <img class="images" src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/pngwing.com%20(17).png"
+            <img class="https://github.com/Rithusurya/Vega-Restaurant/blob/main/pngwing.com%20(17).png?raw=true"
                 alt="Food Image">
         </div>
         <div class="question">
             <h2>Why Choose Us?</h2>
             <div class="q-ans">
-                <img src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/pngwing.com%20(22).png"
+                <img src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/pngwing.com%20(22).png?raw=true"
                     alt="Icon">
                 <div>
                     <h4>Delicious Options</h4>
@@ -200,7 +200,7 @@
                 </div>
             </div>
             <div class="q-ans">
-                <img src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/pngwing.com%20(18).png"
+                <img src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/pngwing.com%20(18).png?raw=true"
                     alt="Icon">
                 <div>
                     <h4>Healthy Choices</h4>
@@ -208,7 +208,7 @@
                 </div>
             </div>
             <div class="q-ans">
-                <img src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/pngwing.com%20(29).png"
+                <img src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/pngwing.com%20(29).png?raw=true"
                     alt="Icon">
                 <div>
                     <h4>Culinary Excellence</h4>
@@ -231,7 +231,7 @@
         <div class="fav-food">
             <div class="item">
                 <div class="item_img">
-                    <img src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/pngwing.com%20(10).png"
+                    <img src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/pngwing.com%20(10).png?raw=true"
                         alt="errorerror">
                 </div>
                 <h3> Steamed fish with soy sauce</h3>
@@ -244,7 +244,7 @@
 
             <div class="item">
                 <div class="item_img">
-                    <img src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/pngwing.com%20(23).png"
+                    <img src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/pngwing.com%20(23).png?raw=true"
                         alt="errorerror">
                 </div>
 
@@ -258,7 +258,7 @@
 
             <div class="item">
                 <div class="item_img">
-                    <img src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/farfalle-pasta-with-meatballs-spinach-sauce-with-fried-chickpeas.jpg"
+                    <img src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/farfalle-pasta-with-meatballs-spinach-sauce-with-fried-chickpeas.jpg?raw=true"
                         alt="errorerror">
                 </div>
                 <h3> Farfalle pasta with meatballs</h3>
@@ -269,7 +269,7 @@
             </div>
             <div class="item">
                 <div class="item_img">
-                    <img src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/pngwing.com.png"
+                    <img src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/pngwing.com.png?raw=true"
                         alt="errorerror">
                 </div>
                 <h3> Beef Chow Mein with beef</h3>
@@ -346,11 +346,11 @@
             <h2>Gallery</h2>
             <div class="gallery">
                 <div class="gal_img">
-                    <img src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/nick-karvounis-Ciqxn7FE4vE-unsplash.jpg" alt="">
-                    <img src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/piotr-szulawski-DCmUhk54F6M-unsplash.jpg" alt="">
-                    <img src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/priscilla-du-preez-W3SEyZODn8U-unsplash.jpg" alt="">
-                    <img src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/josh-wilburne-hPeGDIGHnoI-unsplash.jpg" alt="">
-                    <img src="file:///C:/Users/Dell/OneDrive/Desktop/Vega%20Restaurant/jason-leung-poI7DelFiVA-unsplash.jpg" alt="">
+                    <img src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/nick-karvounis-Ciqxn7FE4vE-unsplash.jpg?raw=true" alt="">
+                    <img src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/piotr-szulawski-DCmUhk54F6M-unsplash.jpg?raw=true" alt="">
+                    <img src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/priscilla-du-preez-W3SEyZODn8U-unsplash.jpg?raw=true" alt="">
+                    <img src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/josh-wilburne-hPeGDIGHnoI-unsplash.jpg?raw=true" alt="">
+                    <img src="https://github.com/Rithusurya/Vega-Restaurant/blob/main/jason-leung-poI7DelFiVA-unsplash.jpg?raw=true" alt="">
                     <button>More</button>
                 </div>
             </div>
